# RadishMD-Cloud

./: CLAUDE.md
backend/: .env  .env.explam  pyproject.toml  radish.db
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: api_key.py  device.py  directory.py
backend/app/routers/: api_keys.py  devices.py  directories.py  storage.py
backend/app/services/: auth.py  storage_service.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BreadcrumbNav.tsx  DeviceSelector.tsx  FileExplorer.tsx  FileItem.tsx  LoginForm.tsx  Sidebar.tsx
frontend/src/components/ui/: alert.tsx  breadcrumb.tsx  card.tsx  dialog.tsx  select.tsx
frontend/src/context/: auth-context.tsx  device-context.tsx
frontend/src/hooks/: use-storage.ts
frontend/src/pages/: ApiTutorialPage.tsx  DashboardPage.tsx  DeviceManagementPage.tsx  DirectoryManagementPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
