[project]
name = "radish-cloud-storage"
version = "0.1.0"
description = "Cloud storage management service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
]

[tool.uv]
dev-dependencies = []
